Frame work 003 on 18-12-2019

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,47 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite</th></tr>
-<tr><td><a href="#t0">Registration Automation</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">10,552</td><td></td><td></td></tr>
+<tr><th colspan="7">InstaNMC-Automation</th></tr>
+<tr><td><a href="#t0">Registration Test</a></td><td class="num">0</td><td class="num attn">2</td><td class="num">0</td><td class="num">918</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Registration Automation &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.nmc.testcases.two_seven.SampleTestCase</td><td><a href="#m0">test_1</a></td><td rowspan="1">1576587393262</td><td rowspan="1">3995</td></tr><tr class="passedeven"><td><a href="#m1">test_2</a></td><td rowspan="1">1576587397264</td><td rowspan="1">4</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">InstaNMC-Automation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Registration Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">com.nmc.testcases.two_seven.SampleTestCase</td><td><a href="#m0">setUp</a></td><td rowspan="1">1576677465947</td><td rowspan="1">124</td></tr><tr><th colspan="4">Registration Test &#8212; skipped (configuration methods)</th></tr><tr class="skippedeven"><td rowspan="4">com.nmc.testcases.two_seven.SampleTestCase</td><td><a href="#m1">after_method</a></td><td rowspan="2">1576677466143</td><td rowspan="2">0</td></tr><tr class="skippedeven"><td><a href="#m2">after_method</a></td></tr><tr class="skippedeven"><td><a href="#m3">before_method</a></td><td rowspan="2">1576677466136</td><td rowspan="2">0</td></tr><tr class="skippedeven"><td><a href="#m4">before_method</a></td></tr><tr><th colspan="4">Registration Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="2">com.nmc.testcases.two_seven.SampleTestCase</td><td><a href="#m5">test_1</a></td><td rowspan="1">1576677466095</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m6">test_2</a></td><td rowspan="1">1576677466138</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>Registration Automation</h2><h3 id="m0">com.nmc.testcases.two_seven.SampleTestCase#test_1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.nmc.testcases.two_seven.SampleTestCase#test_2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Registration Test</h2><h3 id="m0">com.nmc.testcases.two_seven.SampleTestCase#setUp</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>chrome</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalStateException: The driver executable does not exist: /home/manish/Desktop/ReportFromRepository/Instanmc.Automation/./drivers/chromedriver
+	at com.google.common.base.Preconditions.checkState(Preconditions.java:585)
+	at org.openqa.selenium.remote.service.DriverService.checkExecutable(DriverService.java:146)
+	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:141)
+	at org.openqa.selenium.chrome.ChromeDriverService.access$000(ChromeDriverService.java:35)
+	at org.openqa.selenium.chrome.ChromeDriverService$Builder.findDefaultExecutable(ChromeDriverService.java:159)
+	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
+	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:94)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
+	at com.nmc.generics.BaseClass.setUp(BaseClass.java:43)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.nmc.testcases.two_seven.SampleTestCase#after_method</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.nmc.testcases.two_seven.SampleTestCase#after_method</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.nmc.testcases.two_seven.SampleTestCase#before_method</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.nmc.testcases.two_seven.SampleTestCase#before_method</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.nmc.testcases.two_seven.SampleTestCase#test_1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalStateException: The driver executable does not exist: /home/manish/Desktop/ReportFromRepository/Instanmc.Automation/./drivers/chromedriver
+	at com.google.common.base.Preconditions.checkState(Preconditions.java:585)
+	at org.openqa.selenium.remote.service.DriverService.checkExecutable(DriverService.java:146)
+	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:141)
+	at org.openqa.selenium.chrome.ChromeDriverService.access$000(ChromeDriverService.java:35)
+	at org.openqa.selenium.chrome.ChromeDriverService$Builder.findDefaultExecutable(ChromeDriverService.java:159)
+	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
+	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:94)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
+	at com.nmc.generics.BaseClass.setUp(BaseClass.java:43)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">com.nmc.testcases.two_seven.SampleTestCase#test_2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.IllegalStateException: The driver executable does not exist: /home/manish/Desktop/ReportFromRepository/Instanmc.Automation/./drivers/chromedriver
+	at com.google.common.base.Preconditions.checkState(Preconditions.java:585)
+	at org.openqa.selenium.remote.service.DriverService.checkExecutable(DriverService.java:146)
+	at org.openqa.selenium.remote.service.DriverService.findExecutable(DriverService.java:141)
+	at org.openqa.selenium.chrome.ChromeDriverService.access$000(ChromeDriverService.java:35)
+	at org.openqa.selenium.chrome.ChromeDriverService$Builder.findDefaultExecutable(ChromeDriverService.java:159)
+	at org.openqa.selenium.remote.service.DriverService$Builder.build(DriverService.java:355)
+	at org.openqa.selenium.chrome.ChromeDriverService.createDefaultService(ChromeDriverService.java:94)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:123)
+	at com.nmc.generics.BaseClass.setUp(BaseClass.java:43)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
