--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e677af">  <td>19/12/17 18:26:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestCase.after_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@7ea37dbf]">&lt;&lt;after_method</td> 
-<td>&nbsp;</td>  <td>main@831236296</td>   <td></td> </tr>
-<tr bgcolor="e677af">  <td>19/12/17 18:26:37</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestCase.after_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@7ea37dbf]">&lt;&lt;after_method</td> 
-<td>&nbsp;</td>  <td>main@831236296</td>   <td></td> </tr>
-<tr bgcolor="e677af">  <td>19/12/17 18:26:33</td>   <td>-4000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTestCase.before_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@7ea37dbf]">&gt;&gt;before_method</td> 
-<td>&nbsp;</td>  <td>main@831236296</td>   <td></td> </tr>
-<tr bgcolor="e677af">  <td>19/12/17 18:26:37</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTestCase.before_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@7ea37dbf]">&gt;&gt;before_method</td> 
-<td>&nbsp;</td>  <td>main@831236296</td>   <td></td> </tr>
-<tr bgcolor="ab799c">  <td>19/12/17 18:26:26</td>   <td>-10511</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@7ea37dbf]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@831236296</td>   <td></td> </tr>
-<tr bgcolor="e677af">  <td>19/12/17 18:26:33</td>   <td>-4000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestCase.test_1()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@7ea37dbf]">test_1</td> 
-  <td>main@831236296</td>   <td></td> </tr>
-<tr bgcolor="e677af">  <td>19/12/17 18:26:37</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestCase.test_2()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@7ea37dbf]">test_2</td> 
-  <td>main@831236296</td>   <td></td> </tr>
+<tr bgcolor="91f5ca">  <td>19/12/18 18:48:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestCase.after_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">&lt;&lt;after_method</td> 
+<td>&nbsp;</td>  <td>main@1965445467</td>   <td></td> </tr>
+<tr bgcolor="91f5ca">  <td>19/12/18 18:48:26</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestCase.after_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">&lt;&lt;after_method</td> 
+<td>&nbsp;</td>  <td>main@1965445467</td>   <td></td> </tr>
+<tr bgcolor="91f5ca">  <td>19/12/18 18:48:20</td>   <td>-5764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTestCase.before_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">&gt;&gt;before_method</td> 
+<td>&nbsp;</td>  <td>main@1965445467</td>   <td></td> </tr>
+<tr bgcolor="91f5ca">  <td>19/12/18 18:48:26</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTestCase.before_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">&gt;&gt;before_method</td> 
+<td>&nbsp;</td>  <td>main@1965445467</td>   <td></td> </tr>
+<tr bgcolor="6ee7e5">  <td>19/12/18 18:48:00</td>   <td>-25608</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1965445467</td>   <td></td> </tr>
+<tr bgcolor="91f5ca">  <td>19/12/18 18:48:20</td>   <td>-5764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestCase.test_1()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">test_1</td> 
+  <td>main@1965445467</td>   <td></td> </tr>
+<tr bgcolor="91f5ca">  <td>19/12/18 18:48:26</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestCase.test_2()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">test_2</td> 
+  <td>main@1965445467</td>   <td></td> </tr>
 </table>
