--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,18 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="91f5ca">  <td>19/12/18 18:48:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestCase.after_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">&lt;&lt;after_method</td> 
-<td>&nbsp;</td>  <td>main@1965445467</td>   <td></td> </tr>
-<tr bgcolor="91f5ca">  <td>19/12/18 18:48:26</td>   <td>6</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestCase.after_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">&lt;&lt;after_method</td> 
-<td>&nbsp;</td>  <td>main@1965445467</td>   <td></td> </tr>
-<tr bgcolor="91f5ca">  <td>19/12/18 18:48:20</td>   <td>-5764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTestCase.before_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">&gt;&gt;before_method</td> 
-<td>&nbsp;</td>  <td>main@1965445467</td>   <td></td> </tr>
-<tr bgcolor="91f5ca">  <td>19/12/18 18:48:26</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTestCase.before_method()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">&gt;&gt;before_method</td> 
-<td>&nbsp;</td>  <td>main@1965445467</td>   <td></td> </tr>
-<tr bgcolor="6ee7e5">  <td>19/12/18 18:48:00</td>   <td>-25608</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1965445467</td>   <td></td> </tr>
-<tr bgcolor="91f5ca">  <td>19/12/18 18:48:20</td>   <td>-5764</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestCase.test_1()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">test_1</td> 
-  <td>main@1965445467</td>   <td></td> </tr>
-<tr bgcolor="91f5ca">  <td>19/12/18 18:48:26</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestCase.test_2()[pri:0, instance:com.nmc.testcases.two_seven.SampleTestCase@437da279]">test_2</td> 
-  <td>main@1965445467</td>   <td></td> </tr>
+<tr bgcolor="aaa2f2">  <td>20/01/02 10:50:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestCase.after_method()[pri:0, instance:com.nmc.testcases.testcase01.SampleTestCase@358c99f5]">&lt;&lt;after_method</td> 
+<td>&nbsp;</td>  <td>main@510854293</td>   <td></td> </tr>
+<tr bgcolor="aaa2f2">  <td>20/01/02 10:50:31</td>   <td>11610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestCase.after_method()[pri:0, instance:com.nmc.testcases.testcase01.SampleTestCase@358c99f5]">&lt;&lt;after_method</td> 
+<td>&nbsp;</td>  <td>main@510854293</td>   <td></td> </tr>
+<tr bgcolor="aaa2f2">  <td>20/01/02 10:50:41</td>   <td>21683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SampleTestCase.after_method()[pri:0, instance:com.nmc.testcases.testcase01.SampleTestCase@358c99f5]">&lt;&lt;after_method</td> 
+<td>&nbsp;</td>  <td>main@510854293</td>   <td></td> </tr>
+<tr bgcolor="aaa2f2">  <td>20/01/02 10:49:50</td>   <td>-29367</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SampleTestCase.before_method()[pri:0, instance:com.nmc.testcases.testcase01.SampleTestCase@358c99f5]">&gt;&gt;before_method</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@510854293</td>   <td></td> </tr>
+<tr bgcolor="a76f76">  <td>20/01/02 10:49:44</td>   <td>-35093</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setUp(java.lang.String)[pri:0, instance:com.nmc.testcases.testcase01.SampleTestCase@358c99f5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@510854293</td>   <td></td> </tr>
+<tr bgcolor="aaa2f2">  <td>20/01/02 10:49:52</td>   <td>-27472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestCase.test_1([[Ljava.lang.Object;)[pri:0, instance:com.nmc.testcases.testcase01.SampleTestCase@358c99f5]">test_1</td> 
+  <td>main@510854293</td>   <td></td> </tr>
+<tr bgcolor="aaa2f2">  <td>20/01/02 10:50:19</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestCase.test_1([[Ljava.lang.Object;)[pri:0, instance:com.nmc.testcases.testcase01.SampleTestCase@358c99f5]">test_1</td> 
+  <td>main@510854293</td>   <td></td> </tr>
+<tr bgcolor="aaa2f2">  <td>20/01/02 10:50:31</td>   <td>11610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleTestCase.test_1([[Ljava.lang.Object;)[pri:0, instance:com.nmc.testcases.testcase01.SampleTestCase@358c99f5]">test_1</td> 
+  <td>main@510854293</td>   <td></td> </tr>
 </table>
